# ccd_maintenance

./: README.md  pyproject.toml  requirements.txt
ccd_maintenance/: cli.py  config.py  data_loader.py  models.py
tests/: test_data_loader.py
tests/fixtures/: 001.cif  ABC.cif  MIL.cif  TON.cif
